# tts_webui_extension.kitten_tts

./: README.md  pyproject.toml  setup.py
.github/workflows/: build_wheel.yml
extension_kitten_tts/: api.py  main.py
tts_webui_extension/kitten_tts/: __init__.py  api.py  main.py
